--- a/FRONT-END/src/app/modules/roles/roles.component.html
+++ b/FRONT-END/src/app/modules/roles/roles.component.html
@@ -1,4 +1,4 @@
-<app-crud 
+<app-crud
   [Module]="'Roles'"
   [items]="filteredRoles"
   [columns]="columns"
@@ -16,37 +16,60 @@
   (statusChange)="changeRoleStatus($event)">
 </app-crud>
 
-<p-dialog [(visible)]="showModal" [style]="{width: '450px'}" [header]="isEditing ? 'Editar Rol' : 'Crear Rol'"
-    [modal]="true" class="p-fluid" appCrudModal [isEditing]="isEditing" (save)="saveRole()" (cancel)="closeModal()">
-    
-    <ng-template pTemplate="content">
-        <form [formGroup]="rolesForm">
-            <div class="field" [ngClass]="{'error': isFieldInvalid('nombreRol')}">
-                <label for="nombreRol">Nombre del Nuevo Rol</label>
-                <input type="text" pInputText id="nombreRol" formControlName="nombreRol" autofocus />
-                <small class="p-error" *ngIf="isFieldInvalid('nombreRol')">
-                    {{ getErrorMessage('nombreRol') }}
-                </small>
-            </div>
-            <div class="field">
-                <label>
-                    <input type="checkbox" (change)="toggleAllPermissions($event)" [checked]="areAllPermissionsChecked()"> Todos
-                </label>
-            </div>
-            <div class="field" formArrayName="permissions">
-                <div *ngFor="let permission of permissions; let i = index">
-                    <label>
-                        <input type="checkbox" [formControlName]="i"> {{permission.nombrePermiso}}
-                    </label>
-                </div>
-            </div>
-        </form>
-    </ng-template>
-    
-    <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn"
-            (click)="closeModal()" (click)="cancelModalMessage()"></button>
-        <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check"
-            class="p-button-text custom-save-btn" (click)="saveRole()"></button>
-    </ng-template>
+<p-dialog [(visible)]="showModal" [style]="{width: '800px'}" [header]="isEditing ? 'Editar Rol' : 'Crear Rol'"
+  [modal]="true" class="p-fluid" appCrudModal [isEditing]="isEditing" (save)="saveRole()" (cancel)="closeModal()">
+  
+  <form [formGroup]="rolesForm" class="role-form">
+    <div class="field mb-4" [ngClass]="{'error': isFieldInvalid('nombreRol')}">
+      <label for="nombreRol">Nombre del Nuevo Rol</label>
+      <input type="text" pInputText id="nombreRol" formControlName="nombreRol" autofocus />
+      <small class="p-error" *ngIf="isFieldInvalid('nombreRol')">
+          {{ getErrorMessage('nombreRol') }}
+      </small>
+    </div>
+
+    <div class="field mb-4">
+      <p-checkbox
+        [binary]="true" [(ngModel)]="selectAll" (onChange)="toggleAllPermissions($event)"
+        [ngModelOptions]="{standalone: true}" label="Seleccionar todos">
+      </p-checkbox>
+    </div>
+
+    <div class="permissions-grid" formArrayName="permissions">
+      <div class="permission-card" *ngFor="let group of permissionGroups">
+        <div class="card-header">
+          <div class="module-title">
+            <i [class]="group.icon"></i>
+            <span>{{group.modulo}}</span>
+          </div>
+          <p-checkbox
+            [binary]="true"
+            [(ngModel)]="group.checked"
+            (onChange)="toggleGroupPermissions(group)"
+            [ngModelOptions]="{standalone: true}"
+            [inputId]="'group-' + group.modulo">
+          </p-checkbox>
+        </div>
+      
+        <div class="permissions-list">
+          <div *ngFor="let permission of group.permisos" class="permission-item">
+            <p-checkbox
+              [formControlName]="findPermissionIndex(permission)"
+              [label]="permission.nombrePermiso"
+              [binary]="true"
+              [inputId]="'permission-' + permission.idPermiso"
+              (onChange)="onPermissionChange(group)">
+            </p-checkbox>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <ng-template pTemplate="footer">
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn"
+        (click)="closeModal()" (click)="cancelModalMessage()"></button>
+    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check"
+        class="p-button-text custom-save-btn" (click)="saveRole()"></button>
+</ng-template>
 </p-dialog>
