--- a/FRONT-END/src/app/modules/credits/credits.component.html
+++ b/FRONT-END/src/app/modules/credits/credits.component.html
@@ -79,7 +79,7 @@
               {{item.tipo}}
             </span>
           </td>
-          <!-- <td>{{item.plazoMaximo}}</td> -->
+          <!-- <td>{{item.plazoMaximo | date:'short'}}</td> -->
           <td>
             <ng-container *ngIf="item.tipo === 'Abono'">
               {{item.estadoAbono ? 'Activo' : 'Anulado'}}
