PDF en compras y ventas

--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -43,8 +43,8 @@
           <li class="item" routerLink="/sales" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-cash-coin mr-2" style="color:springgreen;"></i><a>Ventas</a>
           </li>
-          <li class="item" routerLink="/detailSales" routerLinkActive="active" (click)="closeSidebar()"><i
-              class="bi bi-cash-coin mr-2" style="color:springgreen;"></i><a>Resumen de venta</a></li>
+          <!-- <li class="item" routerLink="/detailSales" routerLinkActive="active" (click)="closeSidebar()"><i
+              class="bi bi-cash-coin mr-2" style="color:springgreen;"></i><a>Resumen de venta</a></li> -->
           <li class="item" routerLink="/credits" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-credit-card mr-2" style="color:yellowgreen;"></i><a>Créditos</a>
           </li>
