Intento picho der ventas con fecha

--- a/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
+++ b/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
@@ -2,8 +2,13 @@
 <app-crud [Module]="'Resumen de Ventas'" 
 [items]="filteredSale" 
 [columns]="colums" 
+[startDate]="startDates"
+[endDate]="endDates"
+[calendar]="false"
 [canDelete]="false"
-    [canExport]="true" [canEdit]="false" [canCreate]="false" [canCancel]="true" (cancel)="cancelSale($event)"
+    [canExport]="true" [canEdit]="false" [canCreate]="false" [canCancel]="true"
+    
+     (cancel)="cancelSale($event)"
     [canSeeDetail]="true" [canStatus]="true" [showStateColumn]="true" [statusField]="'estadoVenta'"
     (detail)="openShowModal($event)" (search)="searchDetailSale($event)"
     (export)="downloadPDF()">
