--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -5,6 +5,14 @@
         class="p-button-success p-button-rounded p-button-outlined" (click)="onCreate()"></button>
       <button *ngIf="canExport" pButton pRipple label="Descargar" icon="pi pi-download"
         class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
+<div *ngIf="calendar">
+ <p-calendar [(ngModel)]="startDate" [showIcon]="true" [dateFormat]="'dd/mm/yy'" placeholder="Fecha de inicio"></p-calendar>
+<p-calendar [(ngModel)]="endDate" [showIcon]="true" [dateFormat]="'dd/mm/yy'"  placeholder="Fecha de fin"></p-calendar>
+
+</div>
+
+       
+
     </div>
 
     <!-- Aplicar clases flex y margin auto para centrar el texto -->
