Cedula ahora si

--- a/FRONT-END/src/app/modules/users/users.component.css
+++ b/FRONT-END/src/app/modules/users/users.component.css
@@ -1,5 +1,6 @@
-input[readonly] {
+.field.editing-mode input {
+  pointer-events: none; /* Deshabilita la interacción */
   background-color: #e0e0e0; /* Cambia el color de fondo */
   color: #a0a0a0; /* Cambia el color del texto */
-  cursor: not-allowed; /* Cambia el cursor para indicar que es no editable */
+  cursor: not-allowed; /* Cambia el cursor */
 }
